# resume_extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  e2e_verify.py  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/v1/endpoints/: resume.py
app/core/: config.py  logging.py  security.py
app/schemas/: resume.py
app/services/: llm_parser.py  pdf_extractor.py  pipeline.py
docs/: index.html
docs/assets/: index-Bo4n5dM6.js
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx
tests/: test_api.py  test_config.py  test_config_cloud.py  test_deps_cloud.py  test_endpoints.py  test_env.py  test_extraction.py  test_llm.py  test_llm_refactor.py  test_logging.py  test_pipeline.py  test_schemas.py
